--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "bits-usage-history",
   "version": "1.0.0",
   "description": "",
-  "main": "collect.mjs",
+  "main": "lib/collect.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "collect": "node lib/collect.mjs",
     "analyze": "node lib/analyze.mjs"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alca",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^14.0.27"
